cabal-version:      2.4
name:               bounty
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             R
maintainer:         Riley-Kilgore@github.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Bounty
      CollectionMaker
      Treasury
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      containers,
      freer-extras,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      text
    hs-source-dirs: src

executable           script-dump
  main-is:           script-dump.hs
  hs-source-dirs:    exe, src
  other-modules:     Bounty, CollectionMaker, Treasury
  build-depends:     base
                    , aeson
                    , cardano-api
                    , cardano-ledger-alonzo
                    , bytestring
                    , containers
                    , freer-extras
                    , plutus-core
                    , plutus-contract
                    , plutus-ledger
                    , plutus-ledger-api
                    , plutus-tx
                    , plutus-tx-plugin
                    , text
                    , serialise
                    , playground-common
  default-language:   Haskell2010
  default-extensions: DataKinds
                      DeriveAnyClass
                      DeriveGeneric
                      DerivingStrategies
                      ExplicitForAll
                      FunctionalDependencies
                      GADTs
                      MultiParamTypeClasses
                      NamedFieldPuns
                      OverloadedStrings
                      PolyKinds
                      KindSignatures
                      StandaloneDeriving
                      TemplateHaskell
                      TypeApplications
                      TypeFamilies
                      TypeOperators
                      MultiParamTypeClasses
                      ScopedTypeVariables
                      StandaloneKindSignatures
  ghc-options:        -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise